From 7783d74 (BSP_PS_errorbar):
==============================

In prisim/bispectrum_phase.py,

(*) Add docstring for function
incoherent_cross_power_spectrum_average()

From 72be647 (BSP_PS_errorbar):
==============================

In prisim/bispectrum_phase.py,

(*) In member function subsample_differencing() of class ClosurePhase,
enforce masked values to data difference of the two terms in eicp_diff
values
(*) Update incoherent averaging of subsample differences in function
incoherent_cross_power_spectrum_average()

From fd86c01 (BSP_PS_errorbar):
==============================

In prisim/bispectrum_phase.py,

(*) In save() member function of class InterferometerArray, fix bug
in writing of baseline labels.

From e6a7ebb (BSP_PS_errorbar):
==============================

In prisim/bispectrum_phase.py,

(*) In member function smooth_in_tbins() and subsample_differencing()
of class ClosurePhase, if the LST cross the 24-hour boundary, unwrap
them to remove the discontinuity.

From d59fce7 (BSP_PS_errorbar):
==============================

In prisim/bispectrum_phase.py,

(*) Remove commented lines due to change made earlier in the way
diagonal offsets are stored in member functions
compute_power_spectrum() and compute_power_spectrum_uncertainty() of
class ClosurePhaseDelaySpectrum

From 5547b9e (BSP_PS_errorbar):
==============================

In prisim/bispectrum_phase.py,

(*) Develop work on producing incoherent average of power spectrum
through function incoherent_cross_power_spectrum_average()

From 0172ece (BSP_PS_errorbar):
==============================

In prisim/bispectrum_phase.py,

(*) In member functions compute_power_spectrum() and
compute_power_spectrum_uncertainty() of class
ClosurePhaseDelaySpectrum, update diagoffsets to be a dictionary
instead of a list. Update respective docstrings accordingly

From 08df256 (BSP_PS_errorbar):
==============================

In prisim/bispectrum_phase.py,
