@@ -443,6 +443,326 @@ def npz2hdf5(npzfile, hdf5file, longitude=0.0, latitude=0.0):
             
 ################################################################################
 
+def save_CPhase_cross_power_spectrum(xcpdps, outfile):
+
+    """
+    ----------------------------------------------------------------------------
+    Save cross-power spectrum information in a dictionary to a HDF5 file
+
+    Inputs:
+
+    xcpdps      [dictionary] This dictionary is essentially an output of the 
+                member function compute_power_spectrum() of class 
+                ClosurePhaseDelaySpectrum. It has the following key-value 
+                structure:
+                'triads' ((ntriads,3) array), 'triads_ind', 
+                ((ntriads,) array), 'lstXoffsets' ((ndlst_range,) array), 'lst' 
+                ((nlst,) array), 'dlst' ((nlst,) array), 'lst_ind' ((nlst,) 
+                array), 'days' ((ndays,) array), 'day_ind' ((ndays,) array), 
+                'dday' ((ndays,) array), 'oversampled' and 'resampled' 
+                corresponding to whether resample was set to False or True in 
+                call to member function FT(). Values under keys 'triads_ind' 
+                and 'lst_ind' are numpy array corresponding to triad and time 
+                indices used in selecting the data. Values under keys 
+                'oversampled' and 'resampled' each contain a dictionary with 
+                the following keys and values:
+                'z'     [numpy array] Redshifts corresponding to the band 
+                        centers in 'freq_center'. It has shape=(nspw,)
+                'lags'  [numpy array] Delays (in seconds). It has shape=(nlags,)
+                'kprll' [numpy array] k_parallel modes (in h/Mpc) corresponding 
+                        to 'lags'. It has shape=(nspw,nlags)
+                'freq_center'   
+                        [numpy array] contains the center frequencies (in Hz) 
+                        of the frequency subbands of the subband delay spectra. 
+                        It is of size n_win. It is roughly equivalent to 
+                        redshift(s)
+                'freq_wts'      
+                        [numpy array] Contains frequency weights applied on 
+                        each frequency sub-band during the subband delay 
+                        transform. It is of size n_win x nchan. 
+                'bw_eff'        
+                        [numpy array] contains the effective bandwidths (in Hz) 
+                        of the subbands being delay transformed. It is of size 
+                        n_win. It is roughly equivalent to width in redshift or 
+                        along line-of-sight
+                'shape' [string] shape of the frequency window function applied. 
+                        Usual values are 'rect' (rectangular), 'bhw' 
+                        (Blackman-Harris), 'bnw' (Blackman-Nuttall). 
+                'fftpow'
+                        [scalar] the power to which the FFT of the window was 
+                        raised. The value is be a positive scalar with 
+                        default = 1.0
+                'lag_corr_length' 
+                        [numpy array] It is the correlation timescale (in 
+                        pixels) of the subband delay spectra. It is proportional 
+                        to inverse of effective bandwidth. It is of size n_win. 
+                        The unit size of a pixel is determined by the difference
+                        between adjacent pixels in lags under key 'lags' which 
+                        in turn is effectively inverse of the effective 
+                        bandwidth of the subband specified in bw_eff
+                
+                It further contains one or more of the following keys named 
+                'whole', 'submodel', 'residual', and 'errinfo' each of which is 
+                a dictionary. 'whole' contains power spectrum info about the 
+                input closure phases. 'submodel' contains power spectrum info 
+                about the model that will have been subtracted (as closure 
+                phase) from the 'whole' model. 'residual' contains power 
+                spectrum info about the closure phases obtained as a difference 
+                between 'whole' and 'submodel'. It contains the following keys 
+                and values:
+                'mean'  [numpy array] Delay power spectrum incoherently 
+                        estimated over the axes specified in xinfo['axes'] 
+                        using the 'mean' key in input cpds or attribute 
+                        cPhaseDS['processed']['dspec']. It has shape that 
+                        depends on the combination of input parameters. See 
+                        examples below. If both collapse_axes and avgcov are 
+                        not set, those axes will be replaced with square 
+                        covariance matrices. If collapse_axes is provided but 
+                        avgcov is False, those axes will be of shape 2*Naxis-1. 
+                'median'
+                        [numpy array] Delay power spectrum incoherently averaged 
+                        over the axes specified in incohax using the 'median' 
+                        key in input cpds or attribute 
+                        cPhaseDS['processed']['dspec']. It has shape that 
+                        depends on the combination of input parameters. See 
+                        examples below. If both collapse_axes and avgcov are not 
+                        set, those axes will be replaced with square covariance 
+                        matrices. If collapse_axes is provided bu avgcov is 
+                        False, those axes will be of shape 2*Naxis-1. 
+                'diagoffsets' 
+                        [dictionary] Same keys corresponding to keys under 
+                        'collapse_axes' in input containing the diagonal 
+                        offsets for those axes. If 'avgcov' was set, those 
+                        entries will be removed from 'diagoffsets' since all the 
+                        leading diagonal elements have been collapsed (averaged) 
+                        further. Value under each key is a numpy array where 
+                        each element in the array corresponds to the index of 
+                        that leading diagonal. This should match the size of the 
+                        output along that axis in 'mean' or 'median' above. 
+                'diagweights'
+                        [dictionary] Each key is an axis specified in 
+                        collapse_axes and the value is a numpy array of weights 
+                        corresponding to the diagonal offsets in that axis.
+                'axesmap'
+                        [dictionary] If covariance in cross-power is calculated 
+                        but is not collapsed, the number of dimensions in the 
+                        output will have changed. This parameter tracks where 
+                        the original axis is now placed. The keys are the 
+                        original axes that are involved in incoherent 
+                        cross-power, and the values are the new locations of 
+                        those original axes in the output. 
+                'nsamples_incoh'
+                        [integer] Number of incoherent samples in producing the 
+                        power spectrum
+                'nsamples_coh'
+                        [integer] Number of coherent samples in producing the 
+                        power spectrum
+
+    outfile     [string] Full path to the external HDF5 file where the cross-
+                power spectrum information provided in xcpdps will be saved    ----------------------------------------------------------------------------
+    """
+
+    if not isinstance(xcpdps, dict):
+        raise TypeError('Input xcpdps must be a dictionary')
+
+    with h5py.File(outfile, 'w') as fileobj:
+        hdrgrp = fileobj.create_group('header')
+        hdrkeys = ['triads', 'triads_ind', 'lst', 'lst_ind', 'dlst', 'days', 'day_ind', 'dday']
+        for key in hdrkeys:
+            dset = hdrgrp.create_dataset(key, data=xcpdps[key])
+
+        sampling = ['oversampled', 'resampled']
+        sampling_keys = ['z', 'kprll', 'lags', 'freq_center', 'bw_eff', 'shape', 'freq_wts', 'lag_corr_length']
+        dpool_keys = ['whole', 'submodel', 'residual', 'errinfo']
+        for smplng in sampling:
+            if smplng in xcpdps:
+                smplgrp = fileobj.create_group(smplng)
+                for key in sampling_keys:
+                    dset = smplgrp.create_dataset(key, data=xcpdps[smplng][key])
+                for dpool in dpool_keys:
+                    if dpool in xcpdps[smplng]:
+                        dpoolgrp = smplgrp.create_group(dpool)
+                        keys = ['diagoffsets', 'diagweights', 'axesmap', 'nsamples_incoh', 'nsamples_coh']
+                        for key in keys:
+                            if isinstance(xcpdps[smplng][dpool][key], dict):
+                                subgrp = dpoolgrp.create_group(key)
+                                for subkey in xcpdps[smplng][dpool][key]:
+                                    dset = subgrp.create_dataset(str(subkey), data=xcpdps[smplng][dpool][key][subkey])
+                            else:
+                                dset = dpoolgrp.create_dataset(key, data=xcpdps[smplng][dpool][key])
+                        for stat in ['mean', 'median']:
+                            if stat in xcpdps[smplng][dpool]:
+                                dset = dpoolgrp.create_dataset(stat, data=xcpdps[smplng][dpool][stat].si.value)
+                                dset.attrs['units'] = str(xcpdps[smplng][dpool][stat].si.unit)
+
+################################################################################
+
+def read_CPhase_cross_power_spectrum(infile):
+
+    """
+    ----------------------------------------------------------------------------
+    Read information about cross power spectrum from an external HDF5 file into
+    a dictionary. This is the counterpart to save_CPhase_corss_power_spectrum()
+
+    Input:
+
+    infile      [string] Full path to the external HDF5 file that contains info
+                about cross-power spectrum. 
+
+    Output:
+
+    xcpdps      [dictionary] This dictionary has structure the same as output 
+                of the member function compute_power_spectrum() of class 
+                ClosurePhaseDelaySpectrum. It has the following key-value 
+                structure:
+                'triads' ((ntriads,3) array), 'triads_ind', 
+                ((ntriads,) array), 'lstXoffsets' ((ndlst_range,) array), 'lst' 
+                ((nlst,) array), 'dlst' ((nlst,) array), 'lst_ind' ((nlst,) 
+                array), 'days' ((ndays,) array), 'day_ind' ((ndays,) array), 
+                'dday' ((ndays,) array), 'oversampled' and 'resampled' 
+                corresponding to whether resample was set to False or True in 
+                call to member function FT(). Values under keys 'triads_ind' 
+                and 'lst_ind' are numpy array corresponding to triad and time 
+                indices used in selecting the data. Values under keys 
+                'oversampled' and 'resampled' each contain a dictionary with 
+                the following keys and values:
+                'z'     [numpy array] Redshifts corresponding to the band 
+                        centers in 'freq_center'. It has shape=(nspw,)
+                'lags'  [numpy array] Delays (in seconds). It has shape=(nlags,)
+                'kprll' [numpy array] k_parallel modes (in h/Mpc) corresponding 
+                        to 'lags'. It has shape=(nspw,nlags)
+                'freq_center'   
+                        [numpy array] contains the center frequencies (in Hz) 
+                        of the frequency subbands of the subband delay spectra. 
+                        It is of size n_win. It is roughly equivalent to 
+                        redshift(s)
+                'freq_wts'      
+                        [numpy array] Contains frequency weights applied on 
+                        each frequency sub-band during the subband delay 
+                        transform. It is of size n_win x nchan. 
+                'bw_eff'        
+                        [numpy array] contains the effective bandwidths (in Hz) 
+                        of the subbands being delay transformed. It is of size 
+                        n_win. It is roughly equivalent to width in redshift or 
+                        along line-of-sight
+                'shape' [string] shape of the frequency window function applied. 
+                        Usual values are 'rect' (rectangular), 'bhw' 
+                        (Blackman-Harris), 'bnw' (Blackman-Nuttall). 
+                'fftpow'
+                        [scalar] the power to which the FFT of the window was 
+                        raised. The value is be a positive scalar with 
+                        default = 1.0
+                'lag_corr_length' 
+                        [numpy array] It is the correlation timescale (in 
+                        pixels) of the subband delay spectra. It is proportional 
+                        to inverse of effective bandwidth. It is of size n_win. 
+                        The unit size of a pixel is determined by the difference
+                        between adjacent pixels in lags under key 'lags' which 
+                        in turn is effectively inverse of the effective 
+                        bandwidth of the subband specified in bw_eff
+                
+                It further contains one or more of the following keys named 
+                'whole', 'submodel', 'residual', and 'errinfo' each of which is 
+                a dictionary. 'whole' contains power spectrum info about the 
+                input closure phases. 'submodel' contains power spectrum info 
+                about the model that will have been subtracted (as closure 
+                phase) from the 'whole' model. 'residual' contains power 
+                spectrum info about the closure phases obtained as a difference 
+                between 'whole' and 'submodel'. It contains the following keys 
+                and values:
+                'mean'  [numpy array] Delay power spectrum incoherently 
+                        estimated over the axes specified in xinfo['axes'] 
+                        using the 'mean' key in input cpds or attribute 
+                        cPhaseDS['processed']['dspec']. It has shape that 
+                        depends on the combination of input parameters. See 
+                        examples below. If both collapse_axes and avgcov are 
+                        not set, those axes will be replaced with square 
+                        covariance matrices. If collapse_axes is provided but 
+                        avgcov is False, those axes will be of shape 2*Naxis-1. 
+                'median'
+                        [numpy array] Delay power spectrum incoherently averaged 
+                        over the axes specified in incohax using the 'median' 
+                        key in input cpds or attribute 
+                        cPhaseDS['processed']['dspec']. It has shape that 
+                        depends on the combination of input parameters. See 
+                        examples below. If both collapse_axes and avgcov are not 
+                        set, those axes will be replaced with square covariance 
+                        matrices. If collapse_axes is provided bu avgcov is 
+                        False, those axes will be of shape 2*Naxis-1. 
+                'diagoffsets' 
+                        [dictionary] Same keys corresponding to keys under 
+                        'collapse_axes' in input containing the diagonal 
+                        offsets for those axes. If 'avgcov' was set, those 
+                        entries will be removed from 'diagoffsets' since all the 
+                        leading diagonal elements have been collapsed (averaged) 
+                        further. Value under each key is a numpy array where 
+                        each element in the array corresponds to the index of 
+                        that leading diagonal. This should match the size of the 
+                        output along that axis in 'mean' or 'median' above. 
+                'diagweights'
+                        [dictionary] Each key is an axis specified in 
+                        collapse_axes and the value is a numpy array of weights 
+                        corresponding to the diagonal offsets in that axis.
+                'axesmap'
+                        [dictionary] If covariance in cross-power is calculated 
+                        but is not collapsed, the number of dimensions in the 
+                        output will have changed. This parameter tracks where 
+                        the original axis is now placed. The keys are the 
+                        original axes that are involved in incoherent 
+                        cross-power, and the values are the new locations of 
+                        those original axes in the output. 
+                'nsamples_incoh'
+                        [integer] Number of incoherent samples in producing the 
+                        power spectrum
+                'nsamples_coh'
+                        [integer] Number of coherent samples in producing the 
+                        power spectrum
+
+    outfile     [string] Full path to the external HDF5 file where the cross-
+                power spectrum information provided in xcpdps will be saved    
+    ----------------------------------------------------------------------------
+    """
+
+    if not isinstance(infile, str):
+        raise TypeError('Input infile must be a string')
+        
+    xcpdps = {}
+    with h5py.File(infile, 'r') as fileobj:
+        hdrgrp = fileobj['header']
+        hdrkeys = ['triads', 'triads_ind', 'lst', 'lst_ind', 'dlst', 'days', 'day_ind', 'dday']
+        for key in hdrkeys:
+            xcpdps[key] = hdrgrp[key].value
+        sampling = ['oversampled', 'resampled']
+        sampling_keys = ['z', 'kprll', 'lags', 'freq_center', 'bw_eff', 'shape', 'freq_wts', 'lag_corr_length']
+        dpool_keys = ['whole', 'submodel', 'residual', 'errinfo']
+        for smplng in sampling:
+            if smplng in fileobj:
+                smplgrp = fileobj[smplng]
+                xcpdps[smplng] = {}
+                for key in sampling_keys:
+                    xcpdps[smplng][key] = smplgrp[key].value
+                for dpool in dpool_keys:
+                    if dpool in smplgrp:                    
+                        xcpdps[smplng][dpool] = {}
+                        dpoolgrp = smplgrp[dpool]
+                        keys = ['diagoffsets', 'diagweights', 'axesmap', 'nsamples_incoh', 'nsamples_coh']
+                        for key in keys:  
+                            if isinstance(dpoolgrp[key], h5py.Group):
+                                xcpdps[smplng][dpool][key] = {}
+                                for subkey in dpoolgrp[key]:
+                                    xcpdps[smplng][dpool][key][subkey] = dpoolgrp[key][subkey].value                                
+                            elif isinstance(dpoolgrp[key], h5py.Dataset):
+                                xcpdps[smplng][dpool][key] = dpoolgrp[key].value
+                            else:
+                                raise TypeError('Invalid h5py data type encountered')
+                        for stat in ['mean', 'median']:
+                            if stat in dpoolgrp:
+                                valunits = dpoolgrp[stat].attrs['units']
+                                xcpdps[smplng][dpool][stat] = dpoolgrp[stat].value * U.Unit(valunits)
+    return xcpdps  
+
+################################################################################
+
 def incoherent_cross_power_spectrum_average(xcpdps, excpdps=None, diagoffsets=None):
     """
     ----------------------------------------------------------------------------
