@@ -1,3 +1,15 @@
+From 55df5dc (BSP_PS_errorbar):
+==============================
+
+In prisim/bispectrum_phase.py,
+
+(*) Add function save_CPhase_cross_power_spectrum() to save cross
+power spectrum info of closure phases in a dictionary to an external
+HDF5 file. 
+(*) Add function read_CPhase_cross_power_spectrum() to read cross
+power spectrum info of closure phases from an external HDF5 file into
+a dictionary 
+
 From 7783d74 (BSP_PS_errorbar):
 ==============================
 
